--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-DB_NAME=Ebinar
-DB_USERNAME=root
-DB_HOST=localhost
+DB_NAME = Ebinar
+DB_USERNAME = root
+DB_HOST = localhost
+APP_PORT = 5000
+SESS_SECRET = Aqekaskdi1341s99130rhj23uejwEiok
